# hyper-trade

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  execution.py  inventory_manager.py  kill_switch.py  main.py  market_data.py  models.py  order_manager.py  persistence.py  pnl_manager.py  quote_engine.py  risk_manager.py  settings.py  state.py  telemetry.py
app/api/: app.py  dashboard_state.py  routes.py  schemas.py
app/exchange/: __init__.py  client.py  normalizer.py  ws_client.py
scripts/: check_env.sh  run_demo_dashboard.py  start_bot.sh  take_screenshots.py
static/: app.js  style.css
static/locales/: en.json  ja.json
templates/: index.html
tests/: conftest.py  test_api.py  test_edge_cases.py  test_inventory_manager.py  test_kill_switch.py  test_market_data.py  test_order_manager.py  test_persistence.py  test_pnl_manager.py  test_quote_engine.py  test_reconnect_recovery.py  test_risk_manager.py  test_settings.py  test_state.py  test_telemetry.py
